# Citadel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt
demo/Floating Citadel Demo app/: main.cpp
demo/Floating Citadel Demo app.xcodeproj/: project.pbxproj
demo/Floating Citadel Demo app.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
demo/Floating Citadel Demo app.xcodeproj/xcshareddata/xcschemes/: Floating Citadel Demo app.xcscheme
demo/citaDemo/: demoGame.cpp  demoGame.h  demoScene.cpp  demoScene.h  game.config  main.cpp  transformComponent.h
demo/config/: game.cfg  inputContext.cfg
demo/demo_app/: main.cpp
demo/shaders/: defaultShader.vert  defaultVert.spv
doc/: BUILD.md  quick_start.md
project/CitadelEngine/CitadelEngine.xcodeproj/: project.pbxproj
project/Floating Citadel Demo app/Floating Citadel Demo app.xcodeproj/: project.pbxproj
project/Xcode/CitadelEngine.xcodeproj/: project.pbxproj
scripts/: setup.sh
source/: CMakeLists.txt
source/citadel/: CMakeLists.txt  citadel.h  citadelECS.h  citadelGame.h  citadelSystem.h
source/citadel/ecs/: CMakeLists.txt  component.cpp  component.h  componentPool.cpp  componentPool.h  entity.cpp  entity.h  filter.h  registry.cpp  registry.h  sceneView.cpp  sceneView.h  system.h  transformComponent.cpp  transformComponent.h
source/citadel/game/: CMakeLists.txt  citadelGame.cpp  citadelGame.h  gameConfig.cpp  gameConfig.h  gameObject.cpp  gameObject.h  scene.cpp  scene.h  sceneStack.cpp  sceneStack.h
source/citadel/graphics/: CMakeLists.txt  camera.cpp  camera.h  formatSupport.cpp  formatSupport.h  graphics.cpp  graphics.h  graphicsCore.cpp  graphicsCore.h  imageView.cpp  imageView.h  meshData.h  queueFamily.cpp  queueFamily.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.h  swapchain.cpp  swapchain.h  texture.h  vertex.h
source/citadel/gui/: CMakeLists.txt  GUI.h  GUIButton.cpp  GUIButton.hpp  GUIConstraint.hpp  GUIEnvironment.cpp  GUIEnvironment.hpp  GUIFactory.cpp  GUIFactory.hpp  GUIObject.cpp  GUIObject.hpp  GUIPanel.cpp  GUIPanel.hpp  GUIRenderObject.cpp  GUIRenderObject.hpp  Readme.md
source/citadel/input/: CMakeLists.txt  input.h  inputContext.cpp  inputContext.h  inputRouter.cpp  inputRouter.h
source/citadel/system/: CMakeLists.txt  JSONSerializable.h  ResourcePath.h  TraceLog.cpp  TraceLog.hpp  cTime.cpp  cTime.h  citadelDef.h  clock.cpp  clock.h  errorCodes.h  random.cpp  random.h  resourcePath.h  resourcePath.mm  serializer.cpp  serializer.h  tickable.h  timer.cpp  timer.h  types.h  windowProperties.cpp  windowProperties.h
